--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="topnav">
-			<a href="piekarnia.html" class="active"><img class="logo-tel" width=75px height=50px src="logo.png"></a>
+			<a href="index.html" class="active"><img class="logo-tel" width=75px height=50px src="logo.png"></a>
 			<div id="myLinks">
 				<a href="oferta.html">Oferta</a>
 				<a href="opinie.html">Opinie</a>
@@ -26,7 +26,7 @@
 				<a href="kontakt.html">Kontakt</a>
 			</div>
 			<div class="logo">
-				<a href="piekarnia.html"><img height=150 width=250 src="logo.png"></a>
+				<a href="index.html"><img height=150 width=250 src="logo.png"></a>
 			</div>
 			<div class="menu-prawo">
 				<a href="oferta.html">Oferta</a>
@@ -115,4 +115,5 @@
 		</script>
 	</body>
 	</html>
+
 	
