--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="topnav">
-		<a href="piekarnia.html" class="active"><img class="logo-tel" width=75px height=50px src="logo.png"></a>
+		<a href="index.html" class="active"><img class="logo-tel" width=75px height=50px src="logo.png"></a>
 		<div id="myLinks">
 			<a href="oferta.html">Oferta</a>
 			<a href="opinie.html">Opinie</a>
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="logo">
-		<a href="piekarnia.html"><img height=150 width=250 src="logo.png"></a>
+		<a href="index.html"><img height=150 width=250 src="logo.png"></a>
 		</div>
 		
 		<div class="menu-prawo">
@@ -37,7 +37,7 @@
 	</nav>
 	<div>
 		<ol class="breadcrumbs">
-			<li class="bc"><a href="piekarnia.html">Home</a></li>
+			<li class="bc"><a href="index.html">Home</a></li>
 			<li class="bc"><a href="kontakt.html">Kontakt</a></li>
 		</ol>
 	</div>
@@ -84,4 +84,5 @@
 			}
 	</script>
 </body>
+
 </html>
